--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylezz.css">
+    <link rel="shortcut icon" href="./resources/favicon-32x32.png">
     <script src="app.js"></script>
-    <title>Document</title>
+    <title>DNDLookUp</title>
 </head>
 <body>
-    
+
 </body>
 </html>
