--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>DNDLookUp</title>
 </head>
 <header>
-    
+<div class="logo">
+<h2>LOGO</h2>
+<div class="header-right">
+    <h3>ABOUT</h3>
+</div>
+</div>    
 </header>
 <body>
 
