--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <header>
 <div class="logo">
-<h2>LOGO</h2>
-<div class="header-right">
-    <h3>ABOUT</h3>
+    <h2>LOGO</h2>
+    <div class="header-right">
+    <a href="about.html">About</a>
 </div>
 </div>    
 </header>
