--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylezz.css">
     <link rel="shortcut icon" href="./resources/favicon-32x32.png">
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
     <title>DNDLookUp</title>
 </head>
 <header>
-    
+
 </header>
 <body>
 
