Added color palette to resource

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>DNDLookUp</title>
 </head>
 <header>
-  <div class="logo">
-      <h2>LOGO</h2>
+  <div class="header">
+      <a class ="logo" href="index.html">LOGO</a>
       <div class="header-right">
         <a href="about.html">About</a>
       </div>
