--- a/about.html
+++ b/about.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h2>LOGO</h2>
+        <div class="header">
+            <a class ="logo" href="index.html">LOGO</a>
             <div class="header-right">
-            <a href="about.html">About</a>
+              <a href="about.html">About</a>
             </div>
-        </div>    
-    </header>
+        </div>
+        
+      </header>
         
 </body>
 </html>
