--- a/index.html
+++ b/index.html
@@ -15,9 +15,19 @@
         <a href="about.html">About</a>
       </div>
   </div>
-  
+
 </header>
 <body>
+  <main>
+    <div class="searchbar-cont">
+      <input type="search" name="searchbar" value="" placeholder="e.g, Acid Arrow">
+    </div>
+
+    <div class="display-cont">
+
+    </div>
+
+  </main>
 
 </body>
 </html>
